# DRF_Home_Work

./: .env.sample  README.md  celerybeat-schedule.dir  docker-compose.yaml  dump.rdb  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
materials/: admin.py  apps.py  models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/manegement/commands/: cc.py  lc.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner.py  0004_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/manegement/commands/: cp.py  csu.py  cu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payments.py  0004_alter_payments_data.py  0005_alter_payments_data.py  0006_payments_payment_id_payments_payment_link_and_more.py  0007_payments_status.py
